Changed a bit how @FunctionalInterface is done